--- a/settings.gradle
+++ b/settings.gradle
@@ -16,6 +16,10 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://raw.github.com/saki4510t/libcommon/master/repository/' }
+        flatDir {
+            dirs 'libs'
+        }
     }
 }
 
